fix overlapping plots, use 'hasProfile'

--- a/public/global.css
+++ b/public/global.css
@@ -67,6 +67,5 @@ button:focus {
 }
 
 /* Bug in uPlot? */
-.uplot > .u-wrap > * {
-	position: absolute;
-}
+.uplot > .u-wrap { position: relative; }
+.uplot > .u-wrap > * { position: absolute; }
